@@ -47,6 +47,7 @@ version 2.2.12:
   - Bug #5239: fix the bug if there are spaces into job name or project
   - Fix the bug in Iolib if DEAD_SWITCH_TIME >0
   - Fix a bug in bipbip when calling the cpuset_manager to clean jobs in error
+  - Bug #5469: fix the bug with reservations and Dead resources
 
 version 2.2.11:
 ---------------
